--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test.component.html
@@ -1,54 +1,64 @@
-<div>
-    <h2 id="page-heading">
-        <span>Aptitude Tests</span>
-        <button id="jh-create-entity" class="btn btn-raised btn-primary float-right jh-create-entity create-aptitude-test" [routerLink]="['/aptitude-test/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span >
-            Create new Aptitude Test
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <br/>
-    <div class="table-responsive" *ngIf="aptitudeTests">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>Name</span></th>
-            <th><span>Created Date</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let aptitudeTest of aptitudeTests ;trackBy: trackId">
-                <td>{{aptitudeTest.name}}</td>
-                <td>{{aptitudeTest.createdDate | date:'longDate'}}</td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['/aptitude-test', aptitudeTest.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/aptitude-test', aptitudeTest.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', 'aptitude-test', { outlets: { popup: aptitudeTest.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline">Delete</span>
-                        </button>
+<div class="row">
+    <div class="col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Pruebas de aptitud
+                    <button id="jh-create-entity" class="btn btn-raised btn-primary float-right"
+                            [routerLink]="['/aptitude-test/new']">
+                        <i class="ft-plus"></i>
+                        <span>
+                            Registrar prueba de aptitud
+                        </span>
+                    </button>
+                </h4>
+            </div>
+            <div class="card-body">
+                <div class="card-block">
+                    <jhi-alert></jhi-alert>
+                    <div class="table-responsive" *ngIf="aptitudeTests; else noAptitudeTests">
+                        <table class="table table-responsive-md text-center">
+                            <thead>
+                            <tr>
+                                <th><span></span></th>
+                                <th><span>Nombre</span></th>
+                                <th><span >Acciones</span></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr *ngFor="let aptitudeTest of aptitudeTests ;trackBy: trackId">
+                                <td>
+                                    <div class="custom-control custom-checkbox m-0">
+                                        <input type="checkbox" class="custom-control-input" id="{{aptitudeTest.id}}">
+                                        <label class="custom-control-label" for="{{aptitudeTest.id}}"></label>
+                                    </div>
+                                </td>
+                                <td>{{aptitudeTest.name}}</td>
+                                <td>
+                                    <a class="info p-0" data-original-title="" title=""
+                                       [routerLink]="['/aptitude-test', aptitudeTest.id, 'view' ]">
+                                        <i class="ft-eye font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="success p-0" data-original-title="" title=""
+                                       [routerLink]="['/aptitude-test', aptitudeTest.id, 'edit']">
+                                        <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                    </a>
+                                    <a class="danger p-0" data-original-title="" title=""
+                                       [routerLink]="['/', 'aptitude-test', { outlets: { popup: aptitudeTest.id + '/delete'} }]"
+                                       replaceUrl="true"
+                                       queryParamsHandling="merge">
+                                        <i class="ft-x font-medium-3 mr-2"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                    <ng-template #noAptitudeTests>
+                        <span>No hay pruebas de aptitud registradas.</span>
+                    </ng-template>
+
+                </div>
+            </div>
+        </div>
     </div>
 </div>
