--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
@@ -73,7 +73,7 @@
                                     <span class="text-bold-500 primary">¿{{question.question}}?</span>
                                 </div>
                                 <div class="col-sm-1 col-md-1 col-1">
-                                    <a (click)="edit " [routerLink]="['/test-question', question.id, 'edit' ]"><i class="ft-edit-2 font-medium-3"></i></a>
+                                    <a [routerLink]="['/test-question', question.id, 'edit' ]"><i class="ft-edit-2 font-medium-3"></i></a>
                                 </div>
                             </div>
                         </div>
