fixing bugs to deploy

--- a/src/main/webapp/app/entities/user-app/user-app-update.component.html
+++ b/src/main/webapp/app/entities/user-app/user-app-update.component.html
@@ -3,8 +3,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="px-3">
-                    <form class="form" name="form" role="form" (ngSubmit)="save()" #updateForm="ngForm"
-                          *ngIf="!success">
+                    <form class="form" name="form" role="form" (ngSubmit)="save()" #updateForm="ngForm">
                         <div class="row justify-content-md-center">
                             <div class="col-md-6">
                                 <div class="form-body">
