Fixed participate logic

--- a/src/main/webapp/app/entities/focus-group/participate.component.html
+++ b/src/main/webapp/app/entities/focus-group/participate.component.html
@@ -35,12 +35,8 @@
                                 <td>{{focusGroup.code}}</td>
                                 <td>
                                     <button id="btn-{{focusGroup.id}}" class="btn btn-raised btn-primary float-right"
-                                            (click)="participate(focusGroup.id)">
-                                        <i class="ft-plus"></i>
-                                        <span>
-            Participar
-            </span>
-                                    </button>
+                                            (click)="participate(focusGroup.id)"><i
+                                        class="ft-plus"></i><span>Participar</span></button>
                                 </td>
                             </tr>
                             </tbody>
