--- a/src/main/webapp/app/entities/focus-group/participate.component.html
+++ b/src/main/webapp/app/entities/focus-group/participate.component.html
@@ -35,7 +35,7 @@
                                 <td>{{focusGroup.code}}</td>
                                 <td>
                                     <button id="btn-{{focusGroup.id}}" class="btn btn-raised btn-primary float-right"
-                                            (click)="participate(focusGroup.id)"><i
+                                            (click)="askParticipation(focusGroup.id,modalToDisplay)"><i
                                         class="ft-plus"></i><span>Participar</span></button>
                                 </td>
                             </tr>
@@ -47,3 +47,41 @@
         </div>
     </div>
 </div>
+
+<ng-template #modalToDisplay let-c="close" let-d="dismiss">
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title" id="jhi-institution-heading">{{focusGroup.aptitudeTest.name}}</h2>
+        </div>
+        <div class="card-body">
+            <div class="px-3">
+                <form class="form ng-untouched ng-pristine ng-valid" name="editForm" role="form" novalidate
+                      #editForm>
+                    <div class="form-body">
+                        <div *ngFor="let testQuestion of testQuestions">
+                            <h4 class="form-section"><i class="ft-feather"></i>{{testQuestion.question}}</h4>
+                            <div class="form-group">
+                                <div class="custom-control custom-radio"
+                                     *ngFor="let testAnswerOption of testQuestion.answers">
+                                    <input type="radio" id="{{testAnswerOption.id}}" name="{{testQuestion.id}}">
+                                    <label class="form-control-label"
+                                           for="{{testAnswerOption.id}}">{{testAnswerOption.answer}}</label><br>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-actions">
+                        <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
+                                (click)="d('Force cancel')">
+                            <i class="ft-x"></i> Cancelar
+                        </button>
+                        <button class="btn btn-raised btn-primary" type="submit" id="save-entity"
+                                (click)="sendAptitudeTestAnswers(editForm); d('Force cancel')">
+                            <i class="ft ft-file-text"></i> Finalizar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</ng-template>
