Fixed table data

--- a/src/main/webapp/app/entities/test-result/test-result.component.html
+++ b/src/main/webapp/app/entities/test-result/test-result.component.html
@@ -14,6 +14,7 @@
                                 <th><span>ID</span></th>
                                 <th><span></span></th>
                                 <th><span>Grupo de enfoque</span></th>
+                                <th><span>Calificación esperada</span></th>
                                 <th><span>Participante</span></th>
                                 <th><span>Calificación</span></th>
                                 <th><span>Acciones</span></th>
@@ -32,6 +33,11 @@
                                 <td>
                                     <div *ngIf="testResult.focusGroup">
                                         <a [routerLink]="['../focus-group', testResult.focusGroup?.id, 'view' ]">{{testResult.focusGroup?.name}}</a>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div *ngIf="testResult.focusGroup">
+                                        <a [routerLink]="['../focus-group', testResult.focusGroup?.id, 'view' ]">{{testResult.focusGroup?.passingGrade}}</a>
                                     </div>
                                 </td>
                                 <td>
