--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -8,6 +8,7 @@ eg $input-color: red;
 @import 'bootstrap-variables';
 // Import Bootstrap source files from node_modules
 @import '~bootstrap/scss/bootstrap';
+@import '~angular-calendar/scss/angular-calendar';
 @import '../template/sass/app';
 
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
