--- a/src/main/webapp/app/entities/user-app/activities-detail.component.html
+++ b/src/main/webapp/app/entities/user-app/activities-detail.component.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="col text-center align-self-center">
-                        <h6 class="text-uppercase mb-0">{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h6>
+                        <h6 class="text-uppercase mb-0">{{ viewDate | calendarDate:(view + 'ViewTitle'):locale }}</h6>
                     </div>
                     <div class="col text-right">
                         <div class="btn-group d-none d-sm-none d-md-none d-lg-block">
